# jsprest

./: Cargo.toml  README.md  Rocket.toml
src/: errors.rs  jsp_result.rs  lib.rs  main.rs  routes.rs  showlist.rs  shows.rs
src/routes/: projects.rs  show.rs  shows.rs
