[package]
name = "jsprest"
version = "0.1.0"
authors = ["jgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
serde_derive = "1.0.98"
serde = "1.0.98"
serde_json = "1.0.40"
structopt = "0.2.18"
failure = "0.1.5"

