[package]
name = "jsprest"
version = "0.1.0"
authors = ["jgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsp= { git = "https://github.com/jlgerber/jobsyspolice.git"}
structopt = "0.2.18"
failure = "0.1.5"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.8"
clap = "2.33.0"
rocket_cors = "0.5.0"

[dependencies.levelspecter]
git = "https://github.com/jlgerber/levelspecter.git"
#tag = "1.1.0"
features = ["case-insensitive"]
